--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
   <div class="col-12 col-lg-8">
 
     
-    <h1>Biography</h1>
+    <h2>About Me</h2>
 
     <div class="article-style">
       <p>I am a Computer Vision Engineer at <a href="https://www.dragonfruit.ai/" target="_blank" rel="noopener">Dragonfruit AI</a> developing a novel pipeline that tracks entities in multi-camera settings, yielding in valuable information from the scene which any client might use. I am broadly interested at the juncture of Deep Learning and Computer Vision, and I aim to solve challenging and meaningful real-world problems, like scene understanding, through the power of AI.</p>
