Update Standard AI video link

--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
         
 
   
-<a class="btn btn-outline-primary btn-page-header" href="https://www.youtube.com/watch?v=-H86CL8aK9I" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://www.youtube.com/watch?v=m8V-GE9taYQ" target="_blank" rel="noopener">
   Video
 </a>
 
