--- a/workex/standard_ai/index.html
+++ b/workex/standard_ai/index.html
@@ -92,7 +92,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu9eeb12546e8517e7f9c186d851ae3ad9_1969_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu9eeb12546e8517e7f9c186d851ae3ad9_1969_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://benedictflorance.github.io/workex/infilect/" />
+  <link rel="canonical" href="https://meteorex11.github.io/workex/standard_ai/" />
 
   
   
@@ -113,11 +113,11 @@
   
   <meta property="twitter:card" content="summary_large_image" />
   
-  <meta property="og:site_name" content="Benedict Florance Arockiaraj" />
-  <meta property="og:url" content="https://benedictflorance.github.io/workex/infilect/" />
-  <meta property="og:title" content="Visual Intelligence Analytics for FMCG Brands | Benedict Florance Arockiaraj" />
-  <meta property="og:description" content="Advanced image recognition and retail execution analytics for worldwide retail brands." /><meta property="og:image" content="https://benedictflorance.github.io/workex/infilect/featured.png" />
-    <meta property="twitter:image" content="https://benedictflorance.github.io/workex/infilect/featured.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:site_name" content="Ankit Billa" />
+  <meta property="og:url" content="https://meteorex11.github.io/workex/standard_ai/" />
+  <meta property="og:title" content="Spatio-Temporal 3D Object Tracking in Multi-Camera Environments | Ankit Billa" />
+  <meta property="og:description" content="Hypergraph based time-space association for tracking subject trajectories in confined spaces like stores." /><meta property="og:image" content="https://meteorex11.github.io/workex/standard_ai/standard_ai" />
+    <meta property="twitter:image" content="https://meteorex11.github.io/workex/standard_ai/standard_ai" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -130,7 +130,7 @@
   
 
 
-  <title>Visual Intelligence Analytics for FMCG Brands | Ankit Billa</title>
+  <title>Spatio-Temporal 3D Object Tracking in Multi-Camera Environments | Ankit Billa</title>
 
 
 </head>
