--- a/workex/standard_ai/index.html
+++ b/workex/standard_ai/index.html
@@ -347,7 +347,7 @@
   
     
   
-<a class="btn btn-outline-primary btn-page-header" href="https://www.youtube.com/watch?v=xOheFZOQmvQ" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://www.youtube.com/watch?v=m8V-GE9taYQ" target="_blank" rel="noopener">
   Video
 </a>
 
