--- a/index.html
+++ b/index.html
@@ -1357,7 +1357,7 @@
     
     <a href="/research/acl/"  class="summary-link">
       <div class="article-style">
-        2D Depth-Image based terrain analysis and classification for quadruped robots deployed in off-road environments.
+        2D Depth-Image based terrain analysis and classification for off-road environments.
       </div>
     </a>
     
