--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
   
 
   
-  <link rel="icon" type="image/png" href="/media/icon_hu9eeb12546e8517e7f9c186d851ae3ad9_1969_32x32_fill_lanczos_center_3.png" />
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu9eeb12546e8517e7f9c186d851ae3ad9_1969_180x180_fill_lanczos_center_3.png" />
+  <link rel="icon" type="image/png" href="/media/icon_a_large.png" />
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon_a_large.png" />
 
   <link rel="canonical" href="https://meteorex11.github.io/" />
 
