--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
   
 
   
-  <link rel="icon" type="image/png" href="/media/icon_a_large.png" />
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_a_large.png" />
+  <link rel="icon" type="image/png" href="/media/icon_a_medium.png" />
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon_a_medium.png" />
 
   <link rel="canonical" href="https://meteorex11.github.io/" />
 
