Make thumbnail rounded

--- a/workex/dragonfruit/index.html
+++ b/workex/dragonfruit/index.html
@@ -62,29 +62,6 @@
 
   
   
-
-
-
-  
-
-
-  
-
-
-  
-
-
-
-
-  
-  
-  
-
-  
-  
-
-  
-  
     <link rel="manifest" href="/manifest.webmanifest" />
   
 
@@ -361,7 +338,7 @@
 </div>
 
 
-<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
+<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px; border-radius: 5%">
   <div style="position: relative">
     <img src="/workex/dragonfruit/dragonfruit_reid.png" width="720" height="480" alt="" class="featured-image">
     <span class="article-header-caption">Person Re-Identification</span>
@@ -375,11 +352,7 @@
     <div class="article-style">
 
       <p align="justify">
-        During my time at Standard AI, I worked on a novel algorithm to solve the problem of space and time association simultaneously, for the purpose of Multi-Camera Multi-Person Tracking in stores of major retailers across North America, Japan and Italy. <br>
-
-        Some of the topics implemented to build this pipeline include 3D Reconstruction, Linear Program Optimization, Camera Clustering and Calibration, Hypergraph-based Tracking. <br>
-
-        In comparison to the previous tracking module, I achieved a 40% increase in accuracy, and a 15% increase in speed along with adding additional scalability, which allowed the pipeline to be deployed in more than 100 stores of varying sizes.
+        I currently work on Multi-Camera Multi-Person Tracking & Re-Identification at Dragonfruit AI, with the Machine Learning Team as a Computer Vision Engineer.<br> I employ the use of various SOTA Transformer-based and Channel Graph-based models to perform this task. <br>
       </p>
 
     </div>
