--- a/workex/dragonfruit/index.html
+++ b/workex/dragonfruit/index.html
@@ -338,9 +338,9 @@
 </div>
 
 
-<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px; border-radius: 5%">
+<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
-    <img src="/workex/dragonfruit/dragonfruit_reid.png" width="720" height="480" alt="" class="featured-image">
+    <img src="/workex/dragonfruit/dragonfruit_reid.png" width="720" height="480" alt="" class="featured-image"  border-radius="5%">
     <span class="article-header-caption">Person Re-Identification</span>
   </div>
 </div>
