--- a/research/kit/index.html
+++ b/research/kit/index.html
@@ -81,7 +81,7 @@
   <meta name="description" content="Generating sensible universal adversarial triggers that are closer to natural phrases." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://hrbrx.space/research/adversarial_triggers/" />
+  <link rel="alternate" hreflang="en-us" href="https://hrbrx.space/research/kit/" />
 
   
   
@@ -283,7 +283,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu9eeb12546e8517e7f9c186d851ae3ad9_1969_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu9eeb12546e8517e7f9c186d851ae3ad9_1969_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://hrbrx.space/research/adversarial_triggers/" />
+  <link rel="canonical" href="https://hrbrx.space/research/kit/" />
 
   
   
@@ -305,10 +305,10 @@
   <meta property="twitter:card" content="summary_large_image" />
   
   <meta property="og:site_name" content="Ankit Billa" />
-  <meta property="og:url" content="https://hrbrx.space/research/adversarial_triggers/" />
+  <meta property="og:url" content="https://hrbrx.space/research/kit/" />
   <meta property="og:title" content="Sensible Universal Adversarial Triggers | Ankit Billa" />
-  <meta property="og:description" content="Generating sensible universal adversarial triggers that are closer to natural phrases." /><meta property="og:image" content="https://hrbrx.space/research/adversarial_triggers/featured.png" />
-    <meta property="twitter:image" content="https://hrbrx.space/research/adversarial_triggers/featured.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Generating sensible universal adversarial triggers that are closer to natural phrases." /><meta property="og:image" content="https://hrbrx.space/research/kit/featured.png" />
+    <meta property="twitter:image" content="https://hrbrx.space/research/kit/featured.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -889,7 +889,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 406px; max-height: 209px;">
   <div style="position: relative">
-    <img src="/research/adversarial_triggers/featured_hufbc94d6d8043fbfbfa8a143f44c7e79d_121891_720x2500_fit_q75_h2_lanczos_3.webp" width="406" height="209" alt="" class="featured-image">
+    <img src="/research/kit/featured_hufbc94d6d8043fbfbfa8a143f44c7e79d_121891_720x2500_fit_q75_h2_lanczos_3.webp" width="406" height="209" alt="" class="featured-image">
     <span class="article-header-caption">Positive Word Cloud</span>
   </div>
 </div>
