--- a/research/kit/index.html
+++ b/research/kit/index.html
@@ -797,9 +797,9 @@
 <div class="btn-links mb-3">
   
   
-<a class="btn btn-outline-primary btn-page-header" href="https://drive.google.com/file/d/1TP26q6haxN3pZdvIfNWirMdeHEkNVAo2/view?usp=sharing" target="_blank" rel="noopener">
+<!-- <a class="btn btn-outline-primary btn-page-header" href="https://drive.google.com/file/d/1TP26q6haxN3pZdvIfNWirMdeHEkNVAo2/view?usp=sharing" target="_blank" rel="noopener">
   PDF
-</a>
+</a> -->
 
 </div>
 
