--- a/research/itw/index.html
+++ b/research/itw/index.html
@@ -116,8 +116,8 @@
   <meta property="og:site_name" content="Ankit Billa" />
   <meta property="og:url" content="https://meteorex11.github.io/research/itw/" />
   <meta property="og:title" content="Multimodal Terrain Classification for Off-Road Environments | Ankit Billa" />
-  <meta property="og:description" content="Hypergraph based time-space association for tracking subject trajectories in confined spaces like stores." /><meta property="og:image" content="https://meteorex11.github.io/research/itw/standard_ai" />
-    <meta property="twitter:image" content="https://meteorex11.github.io/research/itw/standard_ai" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Hypergraph based time-space association for tracking subject trajectories in confined spaces like stores." /><meta property="og:image" content="https://meteorex11.github.io/research/itw/featured.png" />
+    <meta property="twitter:image" content="https://meteorex11.github.io/research/itw/featured.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -363,7 +363,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
-    <img src="/research/itw/standard_ai.png" width="720" height="480" alt="" class="featured-image">
+    <img src="/research/itw/featured.png.png" width="720" height="480" alt="" class="featured-image">
     <span class="article-header-caption">In-Store Person Tracking</span>
   </div>
 </div>
