--- a/research/itw/index.html
+++ b/research/itw/index.html
@@ -363,8 +363,8 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
-    <img src="/research/itw/featured.png.png" width="720" height="480" alt="" class="featured-image">
-    <span class="article-header-caption">In-Store Person Tracking</span>
+    <img src="/research/itw/featured.png" width="720" height="480" alt="" class="featured-image">
+    <span class="article-header-caption">RGBD Dataset Sample</span>
   </div>
 </div>
 
