--- a/research/itw/index.html
+++ b/research/itw/index.html
@@ -117,7 +117,7 @@
   <meta property="og:url" content="https://meteorex11.github.io/research/itw/" />
   <meta property="og:title" content="Multimodal Terrain Classification for Off-Road Environments | Ankit Billa" />
   <meta property="og:description" content="Hypergraph based time-space association for tracking subject trajectories in confined spaces like stores." /><meta property="og:image" content="https://meteorex11.github.io/research/itw/itw.png" />
-    <meta property="twitter:image" content="https://meteorex11.github.io/research/itw/itw.png" /><meta property="og:locale" content="en-us" />
+    <meta property="twitter:image" content="https://meteorex11.github.io/research/itw/" /><meta property="og:locale" content="en-us" />
   
     
       <meta
