--- a/research/itw/index.html
+++ b/research/itw/index.html
@@ -375,7 +375,7 @@
     <div class="article-style">
 
       <p align="justify">
-        <ul>
+        <ul align="justify">
           <li>Built a robust terrain classification model using depth assisted semantic segmentation.</li>
           <li>Collected and generated a novel RGBD + Semantic Segmentation dataset of completely off-road / wild terrains.</li>
           <li>Employed the use of SOTA models like Intel’s Dense Prediction Transformer and MiDaS for dataset benchmarking.</li>
