--- a/research/kit/index.html
+++ b/research/kit/index.html
@@ -809,7 +809,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 406px; max-height: 209px;">
   <div style="position: relative">
-    <img src="/research/kit/featured_hufbc94d6d8043fbfbfa8a143f44c7e79d_121891_720x2500_fit_q75_h2_lanczos_3.webp" width="406" height="209" alt="" class="featured-image">
+    <img src="/research/kit/featured.png" width="406" height="209" alt="" class="featured-image">
     <span class="article-header-caption">Paper Texture Image</span>
   </div>
 </div>
