--- a/research/kit/index.html
+++ b/research/kit/index.html
@@ -116,7 +116,7 @@
   <meta property="og:site_name" content="Ankit Billa" />
   <meta property="og:url" content="https://meteorex11.github.io/research/kit/" />
   <meta property="og:title" content="Paper Fingerprinting using Deep Learning | Ankit Billa" />
-  <meta property="og:description" content="Hypergraph based time-space association for tracking subject trajectories in confined spaces like stores." /><meta property="og:image" content="https://meteorex11.github.io/research/kit/itw.png" />
+  <meta property="og:description" content="Hypergraph based time-space association for tracking subject trajectories in confined spaces like stores." /><meta property="og:image" content="https://meteorex11.github.io/research/kit/featured.png" />
     <meta property="twitter:image" content="https://meteorex11.github.io/research/kit/" /><meta property="og:locale" content="en-us" />
   
     
@@ -354,7 +354,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
-    <img src="/research/kit/itw.png" width="720" height="480" alt="" class="featured-image">
+    <img src="/research/kit/featured.png" width="720" height="480" alt="" class="featured-image">
     <span class="article-header-caption">RGBD Dataset Sample</span>
   </div>
 </div>
