--- a/research/kit/index.html
+++ b/research/kit/index.html
@@ -355,7 +355,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
     <img src="/research/kit/featured.png" width="720" height="480" alt="" class="featured-image">
-    <span class="article-header-caption">RGBD Dataset Sample</span>
+    <span class="article-header-caption">Finding Unique Fingerprints in Microscopic Paper Textures</span>
   </div>
 </div>
 
