--- a/index.html
+++ b/index.html
@@ -1300,7 +1300,7 @@
     <div class="btn-links">
       
   
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/meteorex11/dreamerv2" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/1EEMzCY1-ilYm3TR0gt1OtafGUBiesPw1/view?usp=sharing" target="_blank" rel="noopener">
   PDF
 </a>
 
