--- a/research/mesh_tracking/index.html
+++ b/research/mesh_tracking/index.html
@@ -355,7 +355,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
     <img src="/research/mesh_tracking/mesh_tracking.png" width="720" height="480" alt="" class="featured-image">
-    <span class="article-header-caption">RGBD Dataset Sample</span>
+    <span class="article-header-caption">Projecting an Iron Man helmet onto a subject's face</span>
   </div>
 </div>
 
