--- a/index.html
+++ b/index.html
@@ -1380,7 +1380,7 @@
     
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/meteorex11/dreamerv2" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/1eBuI6ZTB3WsM-M7PMI_XlVB8JUjn8xK4/view?usp=sharing" target="_blank" rel="noopener">
         PDF
       </a>
 
