--- a/index.html
+++ b/index.html
@@ -1810,19 +1810,19 @@
   <a href="/project/holi/" >
     <div class="img-hover-zoom">
       <img src="/project/holi/featured_hu53cf662d4ad852a693b0426b711dd910_839767_808x455_fill_q75_h2_lanczos_smart1_3.webp" height="455" width="808"
-           class="article-banner" alt="Holi Search Engine" loading="lazy">
+           class="article-banner" alt="StreamWorks Search Engine" loading="lazy">
     </div>
   </a>
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/project/holi/" >Holi Search Engine</a>
+    <a href="/project/holi/" >StreamWorks Search Engine</a>
   </div>
 
   
   <a href="/project/holi/"  class="summary-link">
     <div class="article-style">
-      <p>A Google Search like search engine.</p>
+      <p>A Google-esque search engine.</p>
     </div>
   </a>
   
