Update Mini-Minecraft Links

--- a/index.html
+++ b/index.html
@@ -1944,7 +1944,7 @@
   <a href="/project/computer_graphics/" >
     <div class="img-hover-zoom">
       <img src="/project/computer_graphics/featured_hu02bafd814d9d681d6df8f9e7930296f9_2515259_808x455_fill_q75_h2_lanczos_smart1_3.webp" height="455" width="808"
-           class="article-banner" alt="Mini Minecraft" loading="lazy">
+           class="article-banner" alt="Mini-Minecraft : Elden Ring" loading="lazy">
     </div>
   </a>
   
@@ -1956,7 +1956,7 @@
   
   <a href="/project/computer_graphics/"  class="summary-link">
     <div class="article-style">
-      <p>A Minecraft style interactive 3D world exploration game.</p>
+      <p>A Minecraft style interactive 3D world exploration game based on Elden Ring.</p>
     </div>
   </a>
   
@@ -1965,47 +1965,13 @@
   <div class="btn-links">
     
 
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-  
-  
-<!--     
-  
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/mini-minecraft" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/Mini-Minecraft-Elden-Ring" target="_blank" rel="noopener">
   Code
-</a> -->
-
-
-
-
-
-
-
-
-
-
+</a>
   
-  
-    
-  
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.youtube.com/watch?v=_pz-LSqUUKk" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/1hp79g5R_OGyzwktdVBNJb5LfSGW6DJnL/view?usp=sharing" target="_blank" rel="noopener">
   Video
 </a>
-
-
-
 
 
   </div>
