Update Mini Minecraft thumbnail

--- a/index.html
+++ b/index.html
@@ -1943,7 +1943,7 @@
   
   <a href="/project/computer_graphics/" >
     <div class="img-hover-zoom">
-      <img src="/project/computer_graphics/featured_hu02bafd814d9d681d6df8f9e7930296f9_2515259_808x455_fill_q75_h2_lanczos_smart1_3.webp" height="455" width="808"
+      <img src="/project/computer_graphics/mm.png" height="455" width="808"
            class="article-banner" alt="Mini-Minecraft : Elden Ring" loading="lazy">
     </div>
   </a>
