--- a/project/computer_graphics/index.html
+++ b/project/computer_graphics/index.html
@@ -893,7 +893,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 418px;">
   <div style="position: relative">
-    <img src="/project/computer_graphics/featured_hu02bafd814d9d681d6df8f9e7930296f9_2515259_720x2500_fit_q75_h2_lanczos_3.webp" width="720" height="418" alt="" class="featured-image">
+    <img src="/project/computer_graphics/mm.png" width="720" height="418" alt="" class="featured-image">
     <span class="article-header-caption">Mini Minecraft : Elden Ring Edition</span>
   </div>
 </div>
