--- a/index.html
+++ b/index.html
@@ -1807,20 +1807,20 @@
   
   
   
-  <a href="/project/holi/" >
+  <a href="/project/streamworks/" >
     <div class="img-hover-zoom">
-      <img src="/project/holi/featured_hu53cf662d4ad852a693b0426b711dd910_839767_808x455_fill_q75_h2_lanczos_smart1_3.webp" height="455" width="808"
+      <img src="/project/streamworks/banner.png" height="455" width="808"
            class="article-banner" alt="StreamWorks Search Engine" loading="lazy">
     </div>
   </a>
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/project/holi/" >StreamWorks Search Engine</a>
+    <a href="/project/streamworks/" >StreamWorks Search Engine</a>
   </div>
 
   
-  <a href="/project/holi/"  class="summary-link">
+  <a href="/project/streamworks/"  class="summary-link">
     <div class="article-style">
       <p>A Google-esque search engine.</p>
     </div>
@@ -1849,7 +1849,7 @@
   
     
   
-<!-- <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/holi-search-engine" target="_blank" rel="noopener">
+<!-- <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/streamworks-search-engine" target="_blank" rel="noopener">
   Code
 </a> -->
 
