Update image caption

--- a/project/streamworks/index.html
+++ b/project/streamworks/index.html
@@ -356,7 +356,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
     <img src="/project/streamworks/search_results.png" width="720" height="480" alt="" class="featured-image">
-    <span class="article-header-caption">A Google-esque search engine.</span>
+    <span class="article-header-caption">Results of searching for "machine learning" in Debug mode.</span>
   </div>
 </div>
 
