--- a/project/streamworks/index.html
+++ b/project/streamworks/index.html
@@ -368,10 +368,8 @@
 
       <p align="justify">
         <ul align="justify">
-          <li>Built a unique image embedding generation pipeline for document fraud detection using Beta-Variational Autoencoders.</li>
-          <li>Employed the use of Shearlet Transforms, Variational Autoencoders and Generative Networks for robust Fingerprint generation using a specialized Perceptual Loss function.</li>
-          <li>Generated a custom dataset of 55,000 Paper Texture Images for efficient model training.</li>
-          <li>Benchmarked performance of Gabor Filters & Local Binary Patterns for Paper Fingerprint Robustness using Euclidean Distance and Bhattacharyya Distance, on the custom dataset.</li>
+          <li>The Search Engine was built using four key components: crawler, indexer, ranker and frontend server.</li>
+          <li>A corpus of 500k URLs were crawled and efficiently indexed. Sound ranking algorithms were used to rank results with a minimalistic UI to demonstrate the search engine.</li>
         </ul>
       </p>
 
