--- a/project/streamworks/index.html
+++ b/project/streamworks/index.html
@@ -375,7 +375,10 @@
 
     </div>
 
-    
+    <div class="article-tags">
+      <a class="badge badge-light" href="/tag/software/">Software</a>
+    </div>
+  
 
 
 <div class="page-footer">
