--- a/project/computer_graphics/index.html
+++ b/project/computer_graphics/index.html
@@ -375,9 +375,9 @@
 
 <div class="btn-links mb-3">
 
-  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/benedictflorance/mini-minecraft" target="_blank" rel="noopener">Code</a>
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/Mini-Minecraft-Elden-Ring" target="_blank" rel="noopener">Code</a>
 
-  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.youtube.com/watch?v=_pz-LSqUUKk" target="_blank" rel="noopener">Video</a>
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/1hp79g5R_OGyzwktdVBNJb5LfSGW6DJnL/view?usp=sharing" target="_blank" rel="noopener">Video</a>
 
 </div>
 
