Add BE-521 Report

--- a/index.html
+++ b/index.html
@@ -1558,6 +1558,7 @@
   
             <div class="btn-links">
                 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/eeg-regression" target="_blank" rel="noopener">Code</a>
+                <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/eeg-regression/blob/main/BE_521_Final_Project_Report.pdf" target="_blank" rel="noopener">PDF</a>
             </div>
           
           </div>
