--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@
   
             <a href="/project/be521/" >
               <div class="img-hover-zoom">
-                <img src="/project/be521/mm.png" height="455" width="808"
+                <img src="/project/be521/be521_banner.png" height="455" width="808"
                      class="article-banner" alt="Predicting Finger Flexions using EEG Signals" loading="lazy">
               </div>
             </a>
