--- a/index.html
+++ b/index.html
@@ -1528,7 +1528,7 @@
 
     <!-- Finger Flexion Prediction -->    
         
-        <div class="project-card project-item isotope-item js-id-Graphics">
+        <div class="project-card project-item isotope-item js-id-BE">
           
           <div class="card-simple view-card">
             <div class="article-metadata">
