--- a/project/be521/index.html
+++ b/project/be521/index.html
@@ -367,9 +367,9 @@
 
       <p align="justify">
         <ul align="justify">
-          <li>For the purpose of predicting finger flexion movements from the intracranial recordings, we employ the use of a Multi-layer Perceptron Regressor, in a way that takes previous motion of the finger into account.</li>
-          <li>We evaluate the performance of this algorithm compared with others standard machine learning models, by computing the Mean Squared Error (MSE), along with the correlation score between the true finger flexions and the model outputs.</li>
-          <li>In terms of the final correlation score, our approach achieves an r value of 0.4659. </li>
+          <li>For the purpose of predicting finger flexion movements from the intracranial recordings, we employed the use of a Multi-layer Perceptron Regressor, in a way that takes previous motion of the finger into account.</li>
+          <li>We evaluated the performance of this algorithm compared with others standard machine learning models, by computing the Mean Squared Error (MSE), along with the correlation score between the true finger flexions and the model outputs.</li>
+          <li>In terms of the final correlation score, our approach achieved an r value of 0.4659. </li>
         </ul>
       </p>
 
