--- a/index.html
+++ b/index.html
@@ -1637,7 +1637,7 @@
 
         <div class="btn-links">
             <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/tiktok-virality-prediction" target="_blank" rel="noopener">Code</a>
-            <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/eeg-regression/blob/main/BE_521_Final_Project_Report.pdf" target="_blank" rel="noopener">PDF</a>
+            <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://docs.google.com/document/d/1MSqd3nfTBPl2T-C5BZeGVKtQlbLD3xO8/edit#heading=h.gjdgxs" target="_blank" rel="noopener">PDF</a>
         </div>
       
       </div>
