--- a/project/virality_prediction/index.html
+++ b/project/virality_prediction/index.html
@@ -344,11 +344,9 @@
 
 
 <div class="btn-links mb-3">
-
-  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/1MUGOqiXdYXFaLmc5uqEIEGo0P6_Z1A4S/view?usp=sharing" target="_blank" rel="noopener">PDF</a>
-
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/tiktok-virality-prediction" target="_blank" rel="noopener">Code</a>
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://docs.google.com/document/d/1MSqd3nfTBPl2T-C5BZeGVKtQlbLD3xO8/edit#heading=h.gjdgxs" target="_blank" rel="noopener">PDF</a>
 </div>
-
 
 </div>
 
