--- a/project/virality_prediction/index.html
+++ b/project/virality_prediction/index.html
@@ -353,7 +353,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
-    <img src="/project/virality_prediction/search_results.png" width="720" height="480" alt="" class="featured-image">
+    <img src="/project/virality_prediction/featured.png" width="720" height="480" alt="" class="featured-image">
     <span class="article-header-caption">Predicting how viral a TikTok video will be.</span>
   </div>
 </div>
@@ -366,8 +366,7 @@
 
       <p align="justify">
         <ul align="justify">
-          <li>The Search Engine was built using four key components: crawler, indexer, ranker and frontend server.</li>
-          <li>A corpus of 500k URLs were crawled and efficiently indexed. Sound ranking algorithms were used to rank results with a minimalistic UI to demonstrate the search engine.</li>
+          <li>Transformer-based classfication model to predict whether an input video will be viral or not.</li>
         </ul>
       </p>
 
