--- a/index.html
+++ b/index.html
@@ -1579,7 +1579,7 @@
   
         <a href="/project/counting_parts/" >
           <div class="img-hover-zoom">
-            <img src="/project/counting_parts/featured_hu79d72b8484619ab7a184008ffef2b4d1_588425_808x455_fill_q75_h2_lanczos_smart1_3.webp" height="455" width="808"
+            <img src="/project/counting_parts/banner.png" height="455" width="808"
                  class="article-banner" alt="Counting Machine Washer Parts" loading="lazy">
           </div>
         </a>
