--- a/index.html
+++ b/index.html
@@ -1728,20 +1728,20 @@
           <span class="article-date">Nov 13, 2018</span>
         </div>
 
-        <a href="/project/virality_prediction/" >
+        <a href="/project/dapo/" >
           <div class="img-hover-zoom">
-            <img src="/project/virality_prediction/banner.png" height="455" width="808"
-                 class="article-banner" alt="Predicting the virality of TikTok videos" loading="lazy">
+            <img src="/project/dapo/banner.png" height="455" width="808"
+                 class="article-banner" alt="DAPO App" loading="lazy">
           </div>
         </a>
 
 
         <div class="section-subheading article-title mb-1 mt-3">
-          <a href="/project/virality_prediction/" >DAPO App</a>
+          <a href="/project/dapo/" >DAPO App</a>
         </div>
     
       
-        <a href="/project/virality_prediction/"  class="summary-link">
+        <a href="/project/dapo/"  class="summary-link">
           <div class="article-style">
             <p>An android app to fight against drug abuse, made for the Government of Punjab, India.</p>
           </div>
