--- a/index.html
+++ b/index.html
@@ -1699,7 +1699,7 @@
 
 
         <div class="section-subheading article-title mb-1 mt-3">
-          <a href="/project/virality_prediction/" >SONAR Mine Classifier</a>
+          <a href="/project/sonar/" >SONAR Mine Classifier</a>
         </div>
     
       
