--- a/index.html
+++ b/index.html
@@ -1731,7 +1731,7 @@
 
         <a href="/project/dapo/" >
           <div class="img-hover-zoom">
-            <img src="/project/dapo/banner.png" height="455" width="808"
+            <img src="/project/dapo/banner.jpg" height="455" width="808"
                  class="article-banner" alt="DAPO App" loading="lazy">
           </div>
         </a>
