--- a/index.html
+++ b/index.html
@@ -1675,8 +1675,7 @@
 
 
         <div class="btn-links">
-            <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/tiktok-virality-prediction" target="_blank" rel="noopener">Code</a>
-            <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://docs.google.com/document/d/1MSqd3nfTBPl2T-C5BZeGVKtQlbLD3xO8/edit#heading=h.gjdgxs" target="_blank" rel="noopener">PDF</a>
+            <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/1fXxlnEORwcKdIKDjUkG-ojemAX5-T1Y7/view?usp=sharing" target="_blank" rel="noopener">PDF</a>
         </div>
       
       </div>
