--- a/project/auto_rl/index.html
+++ b/project/auto_rl/index.html
@@ -366,7 +366,9 @@
 
       <p align="justify">
         <ul align="justify">
-          <li>A Reinforcement Learning based method to predict actions for an autonomous car to traverse a populated urban environment.</li>
+          <li> Implemented and deployed an Autonomous Driving model in the CARLA simulator for autonomous driving research.</li>
+          <li> Utilized object detection algorithms like the FCDensenet56 & PSPNet models for semantic segmentation of live video of roads.</li>
+          <li> Employed Deep Q Learning Networks for Reinforcement Learning based path planning.</li>
         </ul>
       </p>
 
