--- a/project/text2face/index.html
+++ b/project/text2face/index.html
@@ -344,8 +344,7 @@
 
 
 <div class="btn-links mb-3">
-  
-    
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/14bLChkUG1BG8pjJWd2LWEIJjgjeqxWix/view?usp=sharing" target="_blank" rel="noopener">Presentation</a>
 </div>
 
 
