--- a/workex/standard_ai/index.html
+++ b/workex/standard_ai/index.html
@@ -375,11 +375,11 @@
     <div class="article-style">
 
       <p align="justify">
-        During my time at Standard AI, I worked on a novel algorithm to solve the problem of space and time association simultaneously, for the purpose of Multi-Camera Multi-Person Tracking in stores of major retailers across North America, Japan and Italy. <br>
-
-        Some of the topics implemented to build this pipeline include 3D Reconstruction, Linear Program Optimization, Camera Clustering and Calibration, Hypergraph-based Tracking. <br>
-
-        In comparison to the previous tracking module, I achieved a 40% increase in accuracy, and a 15% increase in speed along with adding additional scalability, which allowed the pipeline to be deployed in more than 100 stores of varying sizes.
+        <ul>
+          <li>During my time at Standard AI, I worked on a novel algorithm to solve the problem of space and time association simultaneously, for the purpose of Multi-Camera Multi-Person Tracking in stores of major retailers across North America, Japan and Italy.</li>
+          <li>Some of the topics implemented to build this pipeline include 3D Reconstruction, Linear Program Optimization, Camera Clustering and Calibration, Hypergraph-based Tracking.</li>
+          <li>In comparison to the previous tracking module, I achieved a 40% increase in accuracy, and a 15% increase in speed along with adding additional scalability, which allowed the pipeline to be deployed in more than 100 stores of varying sizes.</li>
+        </ul>
       </p>
 
     </div>
