Add bullet points

--- a/workex/dragonfruit/index.html
+++ b/workex/dragonfruit/index.html
@@ -352,7 +352,10 @@
     <div class="article-style">
 
       <p align="justify">
-        I currently work on Multi-Camera Multi-Person Tracking & Re-Identification at Dragonfruit AI, with the Machine Learning Team as a Computer Vision Engineer.<br> I employ the use of various SOTA Transformer-based and Channel Graph-based models to perform this task. <br>
+        <ul>
+          <li>I currently work on Multi-Camera Multi-Person Tracking & Re-Identification at Dragonfruit AI, with the Machine Learning Team as a Computer Vision Engineer.</li>
+          <li>I employ the use of various SOTA Transformer-based and Channel Graph-based models to perform this task.</li>
+        </ul>
       </p>
 
     </div>
