--- a/project/counting_parts/index.html
+++ b/project/counting_parts/index.html
@@ -924,7 +924,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tag/ml/">ML</a>
+  <a class="badge badge-light">ML</a>
   
 </div>
 
