--- a/project/be521/index.html
+++ b/project/be521/index.html
@@ -376,7 +376,8 @@
     </div>
 
     <div class="article-tags">
-      <a class="badge badge-light" href="/tag/ML/">ML</a>
+      <a class="badge badge-light">ML</a>
+      <a class="badge badge-light">Bio-Engineering</a>
     </div>
   
 
