--- a/project/virality_prediction/index.html
+++ b/project/virality_prediction/index.html
@@ -372,8 +372,9 @@
 
     </div>
 
-    
-
+    <div class="article-tags">
+      <a class="badge badge-light">ML</a>
+    </div>
 
 <div class="page-footer">
     
