--- a/project/virality_prediction/index.html
+++ b/project/virality_prediction/index.html
@@ -375,6 +375,11 @@
     <div class="article-tags">
       <a class="badge badge-light">ML</a>
     </div>
+  
+  </div>
+    </article>
+  </div>
+</div>
 
 <div class="page-footer">
     
