--- a/project/sonar/index.html
+++ b/project/sonar/index.html
@@ -374,6 +374,11 @@
     <div class="article-tags">
       <a class="badge badge-light">ML</a>
     </div>
+  
+  </div>
+    </article>
+  </div>
+</div>
 
     
 
