--- a/project/text2face/index.html
+++ b/project/text2face/index.html
@@ -374,6 +374,15 @@
 
     </div>
 
+    <div class="article-tags">
+      <a class="badge badge-light">ML</a>
+    </div>
+  
+  </div>
+    </article>
+  </div>
+</div>
+
     
 
 
