--- a/index.html
+++ b/index.html
@@ -1613,7 +1613,7 @@
           <span class="article-date">Dec 15, 2019</span>
         </div>
 
-        <a href="/project/virality_prediction/" >
+        <a href="/project/auto_rl/" >
           <div class="img-hover-zoom">
             <img src="/project/auto_rl/banner.png" height="455" width="808"
                  class="article-banner" alt="Trajectory Planning for Autonomous Vehicles" loading="lazy">
@@ -1650,7 +1650,7 @@
           <span class="article-date">May 15, 2019</span>
         </div>
 
-        <a href="/project/virality_prediction/" >
+        <a href="/project/text2face/" >
           <div class="img-hover-zoom">
             <img src="/project/text2face/text2face.png" height="455" width="808"
                  class="article-banner" alt="Multimodal Text-2-Face Network for Human Portrait Generation" loading="lazy">
@@ -1663,7 +1663,7 @@
         </div>
     
       
-        <a href="/project/auto_rl/"  class="summary-link">
+        <a href="/project/text2face/"  class="summary-link">
           <div class="article-style">
             <p>Generating human faces from text-descriptions.</p>
           </div>
