--- a/project/streamworks/index.html
+++ b/project/streamworks/index.html
@@ -376,7 +376,7 @@
     </div>
 
     <div class="article-tags">
-      <a class="badge badge-light" href="/tag/software/">Software</a>
+      <a class="badge badge-light">Software</a>
     </div>
   
 
