--- a/project/penn_cloud/index.html
+++ b/project/penn_cloud/index.html
@@ -924,7 +924,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tag/software/">Software</a>
+  <a class="badge badge-light">Software</a>
   
 </div>
 
