--- a/project/computer_graphics/index.html
+++ b/project/computer_graphics/index.html
@@ -408,7 +408,7 @@
     </div>
 
     <div class="article-tags">
-      <a class="badge badge-light" href="/tag/graphics/">Graphics</a>
+      <a class="badge badge-light">Graphics</a>
     </div>
   
 
