--- a/workex/standard_ai/index.html
+++ b/workex/standard_ai/index.html
@@ -29,7 +29,7 @@
   <meta name="description" content="3D tracking across time and space for automating retail stores." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://meteorex11.github.io/workex/standard_ai/" />
+  <link rel="alternate" hreflang="en-us" href="https://harbarex.github.io/workex/standard_ai/" />
 
   
   
@@ -92,7 +92,7 @@
   <link rel="icon" type="image/png" href="/media/icon_a_medium.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_a_medium.png" />
 
-  <link rel="canonical" href="https://meteorex11.github.io/workex/standard_ai/" />
+  <link rel="canonical" href="https://harbarex.github.io/workex/standard_ai/" />
 
   
   
@@ -114,10 +114,10 @@
   <meta property="twitter:card" content="summary_large_image" />
   
   <meta property="og:site_name" content="Ankit Billa" />
-  <meta property="og:url" content="https://meteorex11.github.io/workex/standard_ai/" />
+  <meta property="og:url" content="https://harbarex.github.io/workex/standard_ai/" />
   <meta property="og:title" content="Spatio-Temporal 3D Object Tracking in Multi-Camera Environments | Ankit Billa" />
-  <meta property="og:description" content="Hypergraph based time-space association for tracking subject trajectories in confined spaces like stores." /><meta property="og:image" content="https://meteorex11.github.io/workex/standard_ai/standard_ai" />
-    <meta property="twitter:image" content="https://meteorex11.github.io/workex/standard_ai/standard_ai" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Hypergraph based time-space association for tracking subject trajectories in confined spaces like stores." /><meta property="og:image" content="https://harbarex.github.io/workex/standard_ai/standard_ai" />
+    <meta property="twitter:image" content="https://harbarex.github.io/workex/standard_ai/standard_ai" /><meta property="og:locale" content="en-us" />
   
     
       <meta
