--- a/project/dapo/index.html
+++ b/project/dapo/index.html
@@ -318,7 +318,7 @@
 
 
 <div class="article-container pt-3">
-  <h1>Spatio-Temporal 3D Object Tracking in Multi-Camera Environments</h1>
+  <h1>Drug Abuse Prevention Program Application</h1>
 
   
 
@@ -329,7 +329,7 @@
 
   
   <span class="article-date">
-    Jun 17, 2022
+    Nov 20, 2018
   </span>
   
 
@@ -338,17 +338,6 @@
 
 
 <div class="btn-links mb-3">
-  
-    
-  
-<a class="btn btn-outline-primary btn-page-header" href="https://www.youtube.com/watch?v=m8V-GE9taYQ" target="_blank" rel="noopener">
-  Video
-</a>
-
-
-
-
-
 </div>
 
 
