--- a/index.html
+++ b/index.html
@@ -1513,7 +1513,7 @@
                   </a>
           
                   <div class="btn-links">
-                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/14bLChkUG1BG8pjJWd2LWEIJjgjeqxWix/view?usp=sharing" target="_blank" rel="noopener">PDF</a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/14bLChkUG1BG8pjJWd2LWEIJjgjeqxWix/view?usp=sharing" target="_blank" rel="noopener">Presentation</a>
                   </div>
                 
                 </div>
